<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Crysp DeviceVerify</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="device_settings">Device Settings</string>

    <string name="server_settings">Server Settings</string>
    <string name="xas_server">XAS Server</string>
    <string name="asp">xas-demo.crysp.com</string>
    <string name="xas">xas-demo.crysp.com</string>
    <string name="asp_server">ASP Server</string>
    <string name="app_reset">App Reset</string>
    <string name="reset_app_data">Reset App Data</string>


    <string-array name="themes">
        <item>Default</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>

</resources>