<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativelayout_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:background="#f4f4f4"
    android:orientation="vertical">

    <TextView
        android:id="@+id/serverSettingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:drawableStart="@drawable/ic_server"
        android:drawablePadding="15dp"
        android:text="@string/server_settings"
        android:textSize="18sp"></TextView>

    <View
        android:id="@+id/line"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/serverSettingTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="2dp"
        android:background="#b0bebebe" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/serverSettingTextView"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/xas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"

            android:layout_marginEnd="5dp"
            android:text="@string/xas_server"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/xasedt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/xas"
            android:inputType="none"
            android:textColor="@color/md_grey_800"
            android:textSize="15sp"
            android:autofillHints="" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout1"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/asp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="5dp"
            android:text="@string/asp_server"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/aspedt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/asp"
            android:inputType="none"
            android:textColor="@color/md_grey_800"
            android:textSize="15sp"
            android:autofillHints="" />
    </LinearLayout>


    <TextView
        android:id="@+id/appreset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="45dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="0dp"
        android:drawableStart="@drawable/ic_reset"
        android:drawablePadding="15dp"
        android:gravity="center_vertical"
        android:text="@string/app_reset"
        android:textSize="18sp" />

    <View
        android:id="@+id/line5"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/appreset"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="2dp"
        android:background="#B0BEBEBE" />

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appreset"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/reset_button"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="#ffac494a"
            android:text="@string/reset_app_data"
            android:textColor="#ffffff"
            android:textSize="16sp" />

    </LinearLayout>


</RelativeLayout>
